矩阵求导公式简单添加

--- a/04matrixLinearRegresssion/矩阵求导公式推导.md
+++ b/04matrixLinearRegresssion/矩阵求导公式推导.md
@@ -30,16 +30,17 @@
   \end{bmatrix} = \begin{bmatrix} 
   w & x \\
   y & z 
-  \end{bmatrix}
-  $$
+  \end{bmatrix}$$
+
+
+
 
 5. 展开左边 A x B
 
   $$C = \begin{bmatrix}
   i = ae + bg & j = af + bh\\
   k = ce + dg & l = cf + dh
-  \end{bmatrix}
-  $$
+  \end{bmatrix}$$
 
 6. L对于每一个A的导数$$ \triangledown A_{ij} = \frac{\partial L}{\partial A_{ij}} $$
 
@@ -55,9 +56,10 @@
     $$ \frac{\partial L}{\partial b} = wg + xh \\ $$
     $$ \frac{\partial L}{\partial c} = ye + zf \\ $$
     $$ \frac{\partial L}{\partial d} = yg + zh $$
+    
 
 7. 因此A的导数为
-  $$
+$$
   \triangledown A = \begin{bmatrix}
   we + xf & wg + xh\\
   ye + zf & yg + zh
@@ -71,18 +73,16 @@
   e & g\\
   f & h
   \end{bmatrix}
-  $$
+$$
 
-  $$
-  \triangledown A = G \cdot B^T
-  $$
+
+$$  \triangledown A = G \cdot B^T$$
 
 8. 同理B的导数为:
 $$ \frac{\partial L}{\partial e} = wa + yc \\ $$
 $$ \frac{\partial L}{\partial f} = xa + zc \\ $$
 $$ \frac{\partial L}{\partial g} = wb + yd \\ $$
 $$ \frac{\partial L}{\partial h} = xb + zd $$
-
 $$
 \triangledown A = \begin{bmatrix}
 wa + yc & xa + zc\\
